# oi-cli

./: .gitignore  README.md  pyproject.toml
oi_cli/: api.py  cli.py  log.py  settings.py
